updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Musician and Software Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Los Angeles, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy learning new instruments</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I hope to develop AI programs</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Los Angeles, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to create programs that increase accessibility for those who need it</p>
     </section>
 
     <footer id="footer">
