updating our details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>I live in Los Angeles, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I want to create programs that increase accessibility for those who need it</p>
+      <p>I want to create accessible programs that increase quality of life for those who need it</p>
     </section>
 
     <footer id="footer">
